# DesignPatternPractice

./: .gitignore  README.md
CSharp/Strategy.Duck/: DecoyDuck.cs  Duck.cs  FakeQuack.cs  FlyNoWay.cs  FlyRocketPowered.cs  FlyWithWings.cs  IFlyBehaviour.cs  IQuackBehaviour.cs  MallardDuck.cs  ModelDuck.cs  MuteQuack.cs  Program.cs  Quack.cs  RubberDuck.cs  Squeak.cs  Strategy.Duck.csproj
CSharp/Strategy.Duck/Properties/: AssemblyInfo.cs
CSharp/Strategy/Ducks/MiniDuckSimualtor/: DecoyDuck.cs  FlyRocketPowered.cs  FlyWithWings.cs  IFlyBehaviour.cs  IQuackBehaviour.cs  MiniDuckSimualtor.csproj  ModelDuck.cs  Program.cs  Quack.cs  QuackFake.cs  QuackMute.cs  Squeak.cs
Cpp/Strategy/: README.txt  build.gradle  makefile
Cpp/Strategy/src/main/: main.cpp
Cpp/dpes/: CMakeLists.txt  README.md  main.cpp
Cpp/dpes/src/: main.cpp
Cpp/dpes/src/hardware/proxy/: MotorData.cpp  MotorData.h  MotorProxy.cpp  MotorProxy.h  MotorProxySimulator.cpp  MotorProxySimulator.h  README.md
Cpp/esdp/: CMakeLists.txt  README.md  main.cpp
Cpp/gof/: CMakeLists.txt
Cpp/hfdp/: CMakeLists.txt
Cpp/hfdp/src/: main.cpp
Cpp/hfdp/src/decorator/: Decaf.h  DecoratorPatterns.h  Espresso.cpp  Espresso.h  HouseBlend.h  Soy.cpp  StarbuzzCoffee.h  Whip.cpp  Whip.h
Cpp/hfdp/src/decorator/starbuz/: Beverage.h  CondimentDecorator.h  DarkRoast.cpp  DarkRoast.h  Decaf.cpp  HouseBlend.cpp  Milk.cpp  Milk.h  Mocha.cpp  Mocha.h  Soy.h  StarbuzCoffee.cpp
Cpp/hfdp/src/factory/: FactoryPatterns.h
Cpp/hfdp/src/factory/simple_factory/: CheesePizza.h  ClamPizza.h  PepperoniPizza.h  Pizza.cpp  Pizza.h  PizzaStore.h  PizzaTestDrive.cpp  PizzaTestDrive.h  SimplePizzaFactory.h  VeggiePizza.h
Cpp/hfdp/src/observer/: CurrentConditionDisplay.cpp  CurrentConditionDisplay.h  DisplayElement.h  ForecastDisplay.cpp  ForecastDisplay.h  HeatIndexDisplay.cpp  Observer.h  ObserverPatterns.h  StatisticsDisplay.h  Subject.h  WeatherData.cpp  WeatherData.h  WeatherStation.cpp  WeatherStation.h  WeatherStationHeatIndex.cpp
Cpp/hfdp/src/observer/weather/: HeatIndexDisplay.h  StatisticsDisplay.cpp  WeatherData.cpp  WeatherStation.cpp  WeatherStationHeatIndex.h
Cpp/hfdp/src/state/: StatePatterns.h
Cpp/hfdp/src/state/gumball/: GumballMachine.cpp  GumballMachine.h  GumballMachineTestDrive.h
Cpp/hfdp/src/strategy/: DecoyDuck.cpp  FlyNoWay.h  FlyWithWings.cpp  FlyWithWings.h  MiniDuckSimulator.cpp  MiniDuckSimulator.h  ModelDuck.cpp  ModelDuck.h  Quack.cpp  QuackBehaviour.h  RedHeadDuck.h  RubberDuck.cpp  Squeak.cpp  StrategyPatterns.h
Cpp/hfdp/src/strategy/ducks/: DecoyDuck.h  Duck.cpp  Duck.h  FakeQuack.cpp  FakeQuack.h  FlyBehaviour.h  FlyNoWay.cpp  FlyRocketPowered.cpp  FlyRocketPowered.h  MallardDuck.cpp  MallardDuck.h  MuteQuack.cpp  MuteQuack.h  Quack.h  RedHeadDuck.cpp  RubberDuck.h  Squeak.h
Java/Strategy/: README.txt
Java/Strategy/Ducks/src/main/java/: Duck.java  FakeQuack.java  FlyNoWay.java  FlyRocketPowered.java  MallardDuck.java  ModelDuck.java  RubberDuck.java
Java/Strategy/src/main/java/: DecoyDuck.java  Duck.java  FakeQuack.java  FlyBehaviour.java  FlyNoWay.java  FlyRocketPowered.java  FlyWithWings.java  MallardDuck.java  MiniDuckSimulator.java  MuteQuack.java  Quack.java  QuackBehaviour.java  Squeak.java
Java/hfdp/: README.txt  pom.xml
Java/hfdp/src/main/java/chasej/hfdp/combine/adapter/: DuckSimulator.java  Goose.java  GooseAdapter.java
Java/hfdp/src/main/java/chasej/hfdp/combine/composite/: DuckSimulator.java  Flock.java
Java/hfdp/src/main/java/chasej/hfdp/combine/decorator/: DuckSimulator.java  QuackCounter.java
Java/hfdp/src/main/java/chasej/hfdp/combine/ducks/: DuckCall.java  DuckSimulator.java  MallardDuck.java  Quackable.java  RedheadDuck.java  RubberDuck.java
Java/hfdp/src/main/java/chasej/hfdp/combine/factory/: AbstractDuckFactory.java  CountingDuckFactory.java  DuckFactory.java  DuckSimulator.java
Java/hfdp/src/main/java/chasej/hfdp/combine/mvc/: BPMObserver.java  BeatBar.java  BeatController.java  BeatModel.java  BeatModelInterface.java  BeatObserver.java  ControllerInterface.java  DJTestDrive.java  DJView.java  HeartAdapter.java  HeartController.java  HeartModel.java  HeartModelInterface.java  HeartTestDrive.java
Java/hfdp/src/main/java/chasej/hfdp/combine/observer/: AbstractDuckFactory.java  CountingDuckFactory.java  DuckCall.java  DuckFactory.java  DuckSimulator.java  Flock.java  Goose.java  GooseAdapter.java  MallardDuck.java  Observable.java  Observer.java  QuackCounter.java  QuackObservable.java  Quackable.java  Quackologist.java  RedheadDuck.java  RubberDuck.java
Java/hfdp/src/main/java/chasej/hfdp/command/party/: ApplianceControl.java  ApplianceOffCommand.java  ApplianceOnCommand.java  CeilingFan.java  CeilingFanHighCommand.java  CeilingFanLowCommand.java  CeilingFanMediumCommand.java  CeilingFanOffCommand.java  CeilingLight.java  Command.java  DimmerLightOffCommand.java  DimmerLightOnCommand.java  FaucetControl.java  Hottub.java  HottubOffCommand.java  HottubOnCommand.java  Light.java  LightOffCommand.java  LightOnCommand.java  LivingroomLightOffCommand.java  LivingroomLightOnCommand.java  MacroCommand.java  NoCommand.java  RemoteControl.java  RemoteLoader.java  SecuritySystem.java  Stereo.java  StereoOffCommand.java  StereoOnCommand.java  StereoOnWithCDCommand.java  TV.java  TVOffCommand.java  TVOnCommand.java
Java/hfdp/src/main/java/chasej/hfdp/strategy/: DecoyDuck.java  Duck.java  FakeQuack.java  FlyBehaviour.java  FlyNoWay.java  FlyRocketPowered.java  FlyWithWings.java  MallardDuck.java  MiniDuckSimulator.java  ModelDuck.java  MuteQuack.java  Quack.java  QuackBehaviour.java  RedHeadDuck.java  RubberDuck.java  Squeak.java
Python/Strategy/ducks/strategy/: decoy_duck.py  duck.py  fake_quack.py  fly_behaviour.py  fly_no_way.py  fly_rocket_powered.py  fly_with_wings.py  mallard_duck.py  mini_duck_simulator.py  model_duck.py  mute_quack.py  quack.py  quack_behaviour.py  rubber_duck.py
Python/Strategy/ducks/tests/: mini_duck_simulator_tests.py
Rust/dpes/: Cargo.toml  README.md
Rust/dpes/gof/: Cargo.toml
Rust/dpes/hdfp/: Cargo.toml
(+68 files in other folders)
